src/test/ui/coherence/coherence-impls-send.re.stderr
error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/coherence-impls-send.rs:20:1
   |
LL | unsafe impl Send for (MyType, MyType) {}
   | ^^^^^^^^^^^^^^^^^^^^^----------------
   | |                    |
   | |                    `(MyType, MyType)` is not defined in the current crate
   | impl doesn't use only types from inside the current crate
   |
   = note: define and implement a trait or new type instead

error[E0321]: cross-crate traits with a default impl, like `std::marker::Send`, can only be implemented for a struct/enum type, not `&'static NotSync`
  --> $DIR/coherence-impls-send.rs:24:1
   |
LL | unsafe impl Send for &'static NotSync {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ can't implement cross-crate trait with a default impl for non-struct/enum type

error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/coherence-impls-send.rs:28:1
   |
LL | unsafe impl Send for [MyType] {}
   | ^^^^^^^^^^^^^^^^^^^^^--------
   | |                    |
   | |                    `[MyType]` is not defined in the current crate
   | impl doesn't use only types from inside the current crate
   |
   = note: define and implement a trait or new type instead

error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/coherence-impls-send.rs:32:1
   |
LL | unsafe impl Send for &'static [NotSync] {}
   | ^^^^^^^^^^^^^^^^^^^^^------------------
   | |                    |
   | |                    `[NotSync]` is not defined in the current crate
   | impl doesn't use only types from inside the current crate
   |
   = note: define and implement a trait or new type instead

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0117, E0321.
For more information about an error, try `rustc --explain E0117`.
